# dbt-bouncer

./: .dockerignore  .env.example  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .python-version  .rumdl.toml  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  SECURITY.md  action.yml  changed_files.txt  cspell.json  dbt-bouncer-example.yml  dbt-bouncer-fusion-probe.yml  index.html  makefile  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  rumdl.toml  schema.json  stable  test.py  versions.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
0.0.0/: 404.html  index.html  objects.inv  sitemap.xml
CONTRIBUTING/: index.html
checks_catalog/: index.html
checks_manifest/: index.html
checks_run_results/: index.html
config_file/: index.html
dbt_bouncer/: conf_validator.py  config_validator.py  logger.py  main.py  runner.py  runner_plugins.py  utils.py  version.py
dbt_project/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  selectors.yml
dist_pypi/: dbt_bouncer-0.0.0-py3-none-any.whl
docs/: CONTRIBUTING.md  README.md  brand.md  checks.md  checks_catalog.md  checks_manifest.md  checks_run_results.md  cli.md  config_file.md  configuration.md  dbt-bouncer-example.toml  faq.md  getting_started.md  index.md  running_dbt_bouncer.md  rust-acceleration.md  users.md
getting_started/: index.html
hooks/: dbt-bouncer.sh
latest/: 404.html  dbt-bouncer-example.toml  index.html  objects.inv  search.json  sitemap.xml
rust/: Cargo.toml  pyproject.toml
rust/.github/workflows/: CI.yml
scripts/: assert_alphabetical_checks.py  generate_artifacts.py  generate_rule_codes_doc.py  generate_schema.py  get_dbt_cloud_artifacts.sh  version_update.py
search/: search_index.json
src/: lib.rs
tests/: conftest.py  pytest_helpers.py  test_config_validator.py  test_logger.py  test_main.py  test_utils.py
v0.23.0/: 404.html  index.html  sitemap.xml
v0.23.1/: 404.html  index.html  sitemap.xml
v0.23.2/: 404.html  index.html  sitemap.xml
v0.24.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.25.0/: 404.html  index.html  sitemap.xml
v0.25.0a0/: 404.html  index.html  sitemap.xml
v0.25.0a1/: 404.html  index.html  sitemap.xml
v0.25.0a2/: 404.html  index.html  sitemap.xml
v0.25.0a3/: 404.html  index.html  sitemap.xml
v0.25.0a4/: 404.html  index.html  sitemap.xml
v0.25.0a5/: 404.html  index.html  sitemap.xml
v0.25.0a6/: 404.html  index.html  sitemap.xml
v0.26.0/: 404.html  index.html  sitemap.xml
v0.26.1/: 404.html  index.html  sitemap.xml
v0.27.0/: 404.html  index.html  sitemap.xml
v0.27.1/: 404.html  index.html  sitemap.xml
v0.27.2/: 404.html  index.html  sitemap.xml
v1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
v1.1.1/: 404.html  index.html  sitemap.xml
v1.1.2/: 404.html  index.html  sitemap.xml
v1.1.3/: 404.html  index.html  sitemap.xml
v1.10.0/: 404.html  index.html  sitemap.xml
v1.10.1/: 404.html  index.html  sitemap.xml
v1.11.0/: 404.html  index.html  sitemap.xml
v1.11.1/: 404.html  index.html  sitemap.xml
v1.11.2/: 404.html  index.html  sitemap.xml
v1.12.0/: 404.html  index.html  sitemap.xml
v1.12.1/: 404.html  index.html  sitemap.xml
v1.13.0/: 404.html  index.html  sitemap.xml
v1.14.0/: 404.html  index.html  sitemap.xml
v1.15.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.16.0/: 404.html  index.html  sitemap.xml
v1.16.1/: 404.html  index.html  objects.inv  sitemap.xml
v1.17.0/: 404.html  index.html  sitemap.xml
v1.18.0/: 404.html  index.html  sitemap.xml
v1.19.0/: 404.html  index.html  sitemap.xml
v1.2.0/: 404.html  index.html  sitemap.xml
v1.2.2/: 404.html  index.html  sitemap.xml
v1.2.3/: 404.html  index.html  sitemap.xml
v1.20.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.21.0/: 404.html  index.html  sitemap.xml
v1.22.0/: 404.html  index.html  sitemap.xml
v1.23.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.24.0/: 404.html  index.html  sitemap.xml
v1.25.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.26.0/: 404.html  index.html  sitemap.xml
v1.27.0/: 404.html  index.html  sitemap.xml
v1.27.1/: 404.html  index.html  sitemap.xml
v1.27.1a0/: 404.html  index.html  sitemap.xml
v1.27.1a1/: 404.html  index.html  sitemap.xml
v1.27.1a2/: 404.html  index.html  sitemap.xml
v1.28.0/: 404.html  index.html  sitemap.xml
v1.29.0/: 404.html  index.html  sitemap.xml
v1.3.0/: 404.html  index.html  sitemap.xml
v1.3.1/: 404.html  index.html  sitemap.xml
v1.3.2/: 404.html  index.html  sitemap.xml
v1.3.3/: 404.html  index.html  sitemap.xml
v1.3.4/: 404.html  index.html  sitemap.xml
v1.30.0/: 404.html  index.html  sitemap.xml
v1.31.0/: 404.html  index.html  sitemap.xml
v1.31.2rc1/: 404.html  index.html  sitemap.xml
v1.31.2rc2/: 404.html  index.html  sitemap.xml
v1.31.2rc3/: 404.html  index.html  sitemap.xml
v1.4.0/: 404.html  index.html  sitemap.xml
v1.5.0/: 404.html  index.html  sitemap.xml
v1.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.6.1/: 404.html  index.html  sitemap.xml
v1.6.2/: 404.html  index.html  sitemap.xml
v1.6.3/: 404.html  index.html  sitemap.xml
v1.6.4/: 404.html  index.html  sitemap.xml
v1.7.0/: 404.html  index.html  sitemap.xml
v1.8.0/: 404.html  index.html  sitemap.xml
v1.9.0/: 404.html  index.html  sitemap.xml
v2.0.0/: 404.html  index.html  sitemap.xml
v2.0.0rc2/: 404.html  index.html  sitemap.xml
v2.1.0/: 404.html  index.html  sitemap.xml
v2.2.0/: 404.html  index.html  sitemap.xml
v2.3.0/: 404.html  index.html  sitemap.xml
v2.3.1/: 404.html  index.html  sitemap.xml
v2.3.2/: 404.html  index.html  sitemap.xml
v2.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.5.0/: 404.html  index.html  sitemap.xml
v3.0.0/: 404.html  index.html  sitemap.xml
v3.0.1/: 404.html  index.html  sitemap.xml
(+2892 files in other folders)
