[project]
authors = [{name="Padraic Slattery", email= "pgoslatara@gmail.com"}]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies =[
  "click (!=8.3.0,!=8.3.1,<9)", # Due to this issue: https://github.com/pallets/click/issues/3110
  "dbt-artifacts-parser (>=0.8)",
  "h11 (>=0.16.0)", # To fix security warning
  "jellyfish (>=1,<2)",
  "jinja2 (>=3,<4)",
  "jinja2-simple-tags (<1)",
  "packaging (<26)",
  "progress",
  "pydantic (>=2,<3)",
  "pytest<=10",
  "pyyaml (<7)",
  "requests (>=2,<3)",
  "tabulate (<1)",
  "toml (<1)",
  "semver (<4)"
]
description = "Configure and enforce conventions for your dbt project."
keywords = [
  "python",
  "cli",
  "dbt",
  "CI/CD",
]
license ="MIT"
maintainers = [{name="Padraic Slattery",email="pgoslatara@gmail.com"}]
name = "dbt-bouncer"
readme = "README.md"
requires-python = ">=3.11,<3.15"
version = "2.0.0rc2"

[project.optional-dependencies]
dev = [
  "bandit~=1.0",
  "dbt-core>=1.11.2,<2",
  "dbt-duckdb~=1.0",
  "prek>=0.1,<1",
  "pytest-cov>=5,<8",
  "pytest-xdist~=3.0",
  "pyupgrade~=3.0",
  "ruff~=0.0",
  "shandy-sqlfmt[jinjafmt]~=0.0",
  "ty>=0.0.7"
]
docs = [
  "mike~=2.0",
  "mkdocs~=1.0",
  "mkdocstrings-python<3",
  "mkdocs-click~=0.0",
  "mkdocs-git-revision-date-localized-plugin~=1.0",
  "mkdocs-material~=9.0",
  "pymdown-extensions~=10.0"
]

[project.scripts]
dbt-bouncer = "dbt_bouncer.main:cli"

[project.urls]
repository = "https://github.com/godatadriven/dbt-bouncer"

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
]

[tool.dbt-bouncer]
dbt_artifacts_dir = "dbt_project/target"

[[tool.dbt-bouncer.manifest_checks]]
name = "check_model_has_unique_test"

[[tool.dbt-bouncer.manifest_checks]]
name = "check_model_names"
include = "^staging"
model_name_pattern = "^stg_"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "src/dbt_bouncer/artifact_parsers/dbt_cloud",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
ignore = ["COM812", "D100", "D203", "D213", "D406", "D407", "D409", "E501", "G004", "LOG015", "S101"]
preview=true
select = ["A", "ARG", "B", "C4", "COM", "D", "DOC", "E", "EXE", "F", "I", "ICN", "LOG", "G", "N", "PT", "PTH", "Q", "RUF", "S", "SIM", "T20", "TCH", "TID", "W"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"src/dbt_bouncer/checks/*" = ["ARG001", "D101", "D401", "D417"]
"src/dbt_bouncer/parsers.py" = ["TCH002"]
"tests/*" = ["D100", "D103", "D104", "E402"]

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.uv]
package = true
