[project]
name = "dbt-artifacts-rs"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
